pl 74pre.jcn1
	- oversimplified midi output thru performer hierarchy
	- bf: Spanner::doprint

pl 72pre.jcn1
	- naming fixes; some iter*() explicitations
        - removed acceptor.hh
	- *performer*: second draft of midi (audio/...)

pl 74pre
	- Input_engraver -> Input_translator
	- bf: span start/stop is now a "used" col.
	- Rest_column/Rest_collisions bugfixes
	- bf: crescendi.
	- Spanner do_print()
	
******
july 7
pl 73pre
	- some refs doco.
	- move Input_engraver into Paper_def
	- junk Interpreter
	- naming: Request_engraver -> Engraver, 
	- Music_iterator::next() -> process_and_next()
	- junk Voice_engravers
	- Span_bar, Span_bar_engraver
	- Vertical_align_engraver
	
*******
july 2
pl 72pre
	- \paper{} syntax: var = 1.0\pt;, with an Assoc array
	- sketch of MIDI Performer classes.
	- bf: memleak in parser
	- naming: Acceptor -> Translator
	- input: bf collisions.ly, scales.ly
	- bf: [r8 c8]
	- naming: Register -> Engraver
	- force \\ on identifiers
	- doco updates
	- musixtex T73 fonts

pl 70.mb
	- bf: find syntax in Variables.make
*****
july 1
pl 71pre
	- nested \melodic and \lyric constructs
	- init id's, Input_register aliases.
	- bf: notehead x-swap 
	- bf: auto-keys.
	- bf: first clef
	- junked \init_end; construct
	- Preparatory work for MIDI output:
		* Acceptor as baseclass for Register_group_register
		* Global_acceptor as interface of Register to Score
	- bf: empty voice
	- Lyrics: partially working
	- some doco updates (junks, mostly)


******
june 30


pl 70pre
	- bf: text Script
	- bf: Script::dir_i_ checks.
	- bf: script stacking
	- bf: Text_spanner::do_subst.
	- bf: Text_spanner::Text_spanner(Text_spanner&)
	- bf: script priority read from script.ini
	- bf: Script_def::do_equal_b
	- bf: script dims.
	- mudela: ; obligatory for \paper {}.
	- some cosmetic changes involving RTTI macros

*******
june 29
pl 69pre
	- bf: whole rest position, whole/half rest dots.
	- bf: scripts
	- reg termination
	- centered bars
	- bf: init of Tie::dir_i_ 