@@ -1,0 +1,67 @@
+% should be scriptified, probably
+\documentclass{article}
+\input lilyponddefs
+\title{Bach's Cello suites}
+
+\author{A.U.Thor}
+\begin{document}
+\maketitle
+
+\section{Banjo}
+
+It is normal to have some text around various figures. Such as this
+text which is merely to add some weight to the page. In het midden van
+mei/Als de nachtegaals zingen/En de avondglans huwt/aan de morgense schijn.
+Als de schuchtere geur/ van de bloeiende seringen/zich mengt met de
+geur/van de late jasmijn. Op een tochtje langs de rijn.
+
+\def\EndLilyPondOutput{}
+\begin{figure}[h]
+  \begin{center}
+    \leavevmode
+    \input bach1.out
+    \caption{original}
+  \end{center}
+\end{figure}
+
+Voglio centocinquante gramme di gorgonzola, tre di questi pannini e due bionde
+ragazze con ciocolatta e panna, per favore. Presto! Non posso parlare
+o scrivere la lingua italiana, ma provo.
+
+\section{Hammond-organ and electric guitar}
+
+It is normal to have some text around various figures. Such as this
+text which is merely to add some weight to the page. In het midden van
+mei/Als de nachtegaals zingen/En de avondglans huwt/aan de morgense schijn.
+Als de schuchtere geur/ van de bloeiende seringen/zich mengt met de
+geur/van de late jasmijn. Op een tochtje langs de rijn.
+
+\begin{figure}[h]
+  \begin{center}
+    \leavevmode
+\input bach2.out
+    
+    \caption{interpretation 1}
+  \end{center}
+\end{figure}
+
+It is normal to have some text around various figures. Such as this
+text which is merely to add some weight to the page. In het midden van
+mei/Als de nachtegaals zingen/En de avondglans huwt/aan de morgense schijn.
+Als de schuchtere geur/ van de bloeiende seringen/zich mengt met de
+geur/van de late jasmijn. Op een tochtje langs de rijn.
+
+\begin{figure}[h]
+  \begin{center}
+    \leavevmode
+\input bach3.out
+    
+    \caption{interpretation 2}
+  \end{center}
+\end{figure}
+
+Voglio centocinquante gramme di gorgonzola, tre di questi pannini e due bionde
+ragazze con ciocolatta e panna, per favore. Presto! Non posso parlare
+o scrivere la lingua italiana, ma provo.
+
+\end{document}
