@@ -2,8 +2,8 @@
 
 Begin3
 Title: LilyPond
-Version: 0.0.74pre
-Entered-date: 07/08/97
+Version: 0.0.75
+Entered-date: 07/22/97
 Description: LilyPond is a program which converts a music-script (mudela) into
 TeX output, or MIDI to produce multi-staff scores. Features include multiple
 meters, clefs, keys, lyrics, versatile input-language, cadenzas
@@ -13,7 +13,7 @@ Author: hanwen@stack.nl (Han-Wen Nienhuys)
 	jan@digicash.com (Jan Nieuwenhuizen)
 Maintained-by: hanwen@stack.nl (Han-Wen Nienhuys)
 Primary-site: pcnov095.win.tue.nl /pub/lilypond/  
-	300k lilypond-0.0.74pre.tar.gz
+	300k lilypond-0.0.75.tar.gz
 Alternate-site: 
 Original-site: 
 Platform: unix/win32, GNU C++
