@@ -211,12 +211,7 @@
 }
 
 
-% redefine if not happy with interline spacing
-%
-\def\interstaffline{%
-        \vskip 10pt
-}
-\def\interscoreline{\beauty}
+\def\interscoreline{\vskip 16pt}
         
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % big fat marks, if errors are detected.
